// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`termost should display \`help\` 1`] = `
"[93m[1m[4m[24m[22m[39m
[93m[1m[4mUSAGE:[24m[22m[39m
[92mtermost[39m [...options]
[93m[1m[4m[24m[22m[39m
[93m[1m[4mDESCRIPTION:[24m[22m[39m
Program description placeholder. Program name and version are retrieved from your \`package.json\`. You can override this automatic retrieval by using the \`termost({ name, description, version })\` builder form.
[93m[1m[4m[24m[22m[39m
[93m[1m[4mOPTIONS:[24m[22m[39m
  [92m-h, --help    [39m Display the help center
  [92m-v, --version [39m Print the version
  [92m-f, --flag    [39m A super useful CLI flag"
`;

exports[`termost should display \`help\` 2`] = `
"[93m[1m[4m[24m[22m[39m
[93m[1m[4mUSAGE:[24m[22m[39m
[92mtermost[39m [...options]
[93m[1m[4m[24m[22m[39m
[93m[1m[4mDESCRIPTION:[24m[22m[39m
Program description placeholder. Program name and version are retrieved from your \`package.json\`. You can override this automatic retrieval by using the \`termost({ name, description, version })\` builder form.
[93m[1m[4m[24m[22m[39m
[93m[1m[4mOPTIONS:[24m[22m[39m
  [92m-h, --help    [39m Display the help center
  [92m-v, --version [39m Print the version
  [92m-f, --flag    [39m A super useful CLI flag"
`;

exports[`termost should handle \`command\` api 1`] = `
"[93m[1m[4m[24m[22m[39m
[93m[1m[4mUSAGE:[24m[22m[39m
[92mtermost[39m <command> [...options]
[93m[1m[4m[24m[22m[39m
[93m[1m[4mDESCRIPTION:[24m[22m[39m
Example to showcase the \`command\` API
[93m[1m[4m[24m[22m[39m
[93m[1m[4mCOMMANDS:[24m[22m[39m
  [92mbuild         [39m Transpile and bundle in production mode
  [92mwatch         [39m Rebuild your assets on any code change
[93m[1m[4m[24m[22m[39m
[93m[1m[4mOPTIONS:[24m[22m[39m
  [92m-h, --help    [39m Display the help center
  [92m-v, --version [39m Print the version
  [92m--global      [39m Shared flag between commands"
`;

exports[`termost should handle \`command\` api 2`] = `
"[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👋 Hello, I'm the build command[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Shared global flag = false[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Local command flag = local-value[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Context value = {\\"command\\":\\"build\\",\\"values\\":{\\"globalFlag\\":false,\\"localFlag\\":\\"local-value\\"}}[39m"
`;

exports[`termost should handle \`command\` api 3`] = `
"[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👋 Hello, I'm the watch command[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Shared global flag = false[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Context value = {\\"command\\":\\"watch\\",\\"values\\":{\\"globalFlag\\":false}}[39m"
`;

exports[`termost should handle \`command\` api 4`] = `
"[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👋 Hello, I'm the build command[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Shared global flag = true[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Local command flag = hello[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Context value = {\\"command\\":\\"build\\",\\"values\\":{\\"globalFlag\\":true,\\"localFlag\\":\\"hello\\"}}[39m"
`;

exports[`termost should handle \`command\` api 5`] = `
"[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👋 Hello, I'm the watch command[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Shared global flag = true[39m
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   👉 Context value = {\\"command\\":\\"watch\\",\\"values\\":{\\"globalFlag\\":true}}[39m"
`;

exports[`termost should handle \`command\` api 6`] = `
"[93m[1m[4m[24m[22m[39m
[93m[1m[4mUSAGE:[24m[22m[39m
[92mtermost build[39m [...options]
[93m[1m[4m[24m[22m[39m
[93m[1m[4mDESCRIPTION:[24m[22m[39m
Transpile and bundle in production mode
[93m[1m[4m[24m[22m[39m
[93m[1m[4mOPTIONS:[24m[22m[39m
  [92m-h, --help    [39m Display the help center
  [92m-v, --version [39m Print the version
  [92m--global      [39m Shared flag between commands
  [92m--local       [39m Local command flag"
`;

exports[`termost should handle \`command\` api 7`] = `
"[93m[1m[4m[24m[22m[39m
[93m[1m[4mUSAGE:[24m[22m[39m
[92mtermost watch[39m [...options]
[93m[1m[4m[24m[22m[39m
[93m[1m[4mDESCRIPTION:[24m[22m[39m
Rebuild your assets on any code change
[93m[1m[4m[24m[22m[39m
[93m[1m[4mOPTIONS:[24m[22m[39m
  [92m-h, --help    [39m Display the help center
  [92m-v, --version [39m Print the version
  [92m--global      [39m Shared flag between commands"
`;

exports[`termost should handle \`message\` api 1`] = `
"[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   A content formatted thanks to the \`print\` helper presets.[39m
[92m[1m[22m[39m
[92m[1m✅ Success[22m[39m
[92m   A content formatted thanks to the \`print\` helper presets.[39m
[94m[1m[22m[39m
[94m[1mℹ️  👋 You can also customize the label[22m[39m
[94m   A content formatted thanks to the \`print\` helper presets.[39m
[94m[1m[22m[39m
[94m[1mℹ️  👋 You can also customize the label[22m[39m
[94m   I support also[39m
[94m   multilines[39m
[94m   with array input[39m
[37m[3m[9m[1m[22m[29m[23m[39m
[37m[3m[9m[1mYou can also have a total control on the formatting through the \`format\` helper.[22m[29m[23m[39m"
`;

exports[`termost should handle \`option\` api 1`] = `
"[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   {[39m
[94m  \\"optionWithAlias\\": 0,[39m
[94m  \\"optionWithoutAlias\\": \\"defaultValue\\"[39m
[94m}[39m"
`;

exports[`termost should handle \`task\` api 1`] = `
"[STARTED] Task with returned value (persisted)
[SUCCESS] Task with returned value (persisted)
[STARTED] Task with side-effect only (no persisted value)
[SUCCESS] Task with side-effect only (no persisted value)
[STARTED] Task can also access other persisted task values
[SUCCESS] Task can also access other persisted task values
[STARTED] Or even execute external commands thanks to its provided helpers
[SUCCESS] Or even execute external commands thanks to its provided helpers
[STARTED] A task can have a dynamic label generated from contextual values: small
[SUCCESS] A task can have a dynamic label generated from contextual values: small
[94m[1m[22m[39m
[94m[1mℹ️  Information[22m[39m
[94m   A task with a specified \\"key\\" can be retrieved here. Size = 45. If no \\"key\\" was specified the task returned value cannot be persisted across program instructions.[39m
{
  \\"size\\": 45,
  \\"computedFromOtherTaskValues\\": \\"small\\",
  \\"execOutput\\": \\"Hello from shell\\"
}"
`;
